2006-07-02  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-06-29  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Updated Thai translation.

2006-06-25  Daniel Nylander  <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2006-06-23  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-06-23  Ruben Vermeersch  <ruben@Lambda1.be>

	* POTFILES.in: Deleted src/Preferences.cs.

2006-06-21  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2006-06-21  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-06-20  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-06-19  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* da.po: Updated Danish translation.

2006-06-19  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Updated Czech translation.

2006-06-18  Gintautas Miliauskas  <gintas@akl.lt>

	* lt.po: Updated Lithuanian translation.

2006-06-17  Daniel Nylander  <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2006-06-16  Aaron Bockover  <aaron@abock.org>

	* POTFILES.in: Added new files, removed old

2006-06-15  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation.

2006-06-14  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Czech update.

2006-06-13  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Pepijn van de Geer.

2006-06-08  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Czech - fixed a bad string.

2006-06-07  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Czech update

2006-06-07  Jakub Friedl  <jfriedl@suse.cz>

	* cs.po: Czech update

2006-06-05  Aaron Bockover  <aaron@abock.org>

	* POTFILES.in: Added new files, removed obsolete files

2006-06-05  Arangel Angov <ufo@linux.net.mk>

	* mk.po: Added mk (Macedonian) translation by Jovan Naumovski.
