@@ -12,6 +12,7 @@ src/Banshee.Base/ActionManager.cs
 src/Banshee.Base/AudioCd/AudioCdCore.cs
 src/Banshee.Base/AudioCd/AudioCdDisk.cs
 src/Banshee.Base/AudioCdRipper.cs
+src/Banshee.Base/BansheeBranding.cs
 src/Banshee.Base/Banshee.Burner/BurnerConfigurationPane.cs
 src/Banshee.Base/Banshee.Burner/BurnerCore.cs
 src/Banshee.Base/Banshee.Burner/BurnerFormatList.cs
@@ -19,11 +20,13 @@ src/Banshee.Base/Banshee.Burner/BurnerSessionPreparer.cs
 src/Banshee.Base/Banshee.Burner/BurnerSessionRecorder.cs
 src/Banshee.Base/Banshee.Burner/BurnerSource.cs
 src/Banshee.Base/Banshee.Cdrom.Gui/RecorderSpeedComboBox.cs
+src/Banshee.Base/ComponentInitializer.cs
 src/Banshee.Base/BatchTranscoder.cs
 src/Banshee.Base/Dap/DapCore.cs
 src/Banshee.Base/Dap/Dap.cs
 src/Banshee.Base/Dap/DapPropertiesDialog.cs
 src/Banshee.Base/Gui/OpenLocationDialog.cs
+src/Banshee.Base/Gui/PreferencesDialog.cs
 src/Banshee.Base/FileImportSource.cs
 src/Banshee.Base/FolderImportSource.cs
 src/Banshee.Base/GstTranscoder.cs
@@ -35,6 +38,7 @@ src/Banshee.Base/NetworkDetect.cs
 src/Banshee.Base/PipelineProfile.cs
 src/Banshee.Base/PlayerEngineCore.cs
 src/Banshee.Base/Plugins/PluginDialog.cs
+src/Banshee.Base/Source.cs
 src/Banshee.Base/Sources/AudioCdSource.cs
 src/Banshee.Base/Sources/DapSource.cs
 src/Banshee.Base/Sources/LibrarySource.cs
@@ -47,6 +51,7 @@ src/Banshee.Dap/Ipod/DatabaseRebuilder.cs
 src/Banshee.Dap/Ipod/IpodDap.cs
 src/Banshee.Dap/Ipod/UnsupportedDatabaseView.cs
 src/Banshee.Dap/MassStorage/MassStorageDap.cs
+src/Banshee.Dap/Mtp/MtpDap.cs
 src/Banshee.Dap/Njb/NjbDap.cs
 src/Banshee.MediaEngine/Gstreamer/GstPlayerEngine.cs
 src/Banshee.Plugins/Audioscrobbler/AudioscrobblerConfigDialog.cs
