@@ -1,3 +1,7 @@
+2006-07-03  Aaron Bockover  <aaron@abock.org>
+
+	* POTFILES.in: Added missing files
+
 2006-07-02  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
